<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"
        tools:ignore="ResourceCycle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:layout_below="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview1"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/login"
            android:textColor="@color/White"
            android:textSize="16sp"
            android:textStyle="normal"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:textStyle="italic"
            app:met_textColor="@color/White"
            app:met_floatingLabel="highlight"
            android:textColorHighlight="@color/White"
            app:met_primaryColor="@color/White"
            app:met_textColorHint="@color/White"
            android:hint="Email"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:textColor="@color/White"
            android:inputType="textPassword"
            app:met_textColor="@color/White"
            app:met_floatingLabel="highlight"
            android:textColorHighlight="@color/White"
            app:met_primaryColor="@color/White"
            app:met_textColorHint="@color/White"
            android:hint="Mật Khẩu"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:text="@string/btn_login"
            android:id="@+id/btn_login"
            android:textStyle="bold"
            android:background="@color/none21"
            android:textSize="20dp"
            android:textColor="#fff"
            />
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Quên mật khẩu?"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:textColor="@color/White"
            android:textStyle="bold"
            />
    </LinearLayout>

</RelativeLayout>